# fogros2-sgc

./: .clog.toml  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  SECURITY.md  docker-compose.yaml
.github/workflows/: build.yml  codecov.yml  fmt.yml
bench/: README.md  cyclonedds.ubuntu.2004.xml  cyclonedds.ubuntu.2204.xml  scapy_bench.py  utils.py
bench/benchmark_code/: setup.py
bench/benchmark_code/fogros2_examples/: listener_image.py  listener_latency.py  listener_throughput.py
bench/benchmark_code/launch/: talker.aws.launch.py
bench/benchmark_configs/: experiment_listener.toml  experiment_talker.toml
bench/fogros2_examples/: talker.py  talker_image.py  talker_latency.py  talker_throughput.py
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml  build.rs
core/benches/: 01_default.rs
core/doc/: README.md
core/resources/: ca-private.pem  ca-public.pem  ca-root.pem  ca-root.srl  router-private.pem  router.csr  router.pem  testrouter.csr  testrouter.pem
core/src/: README.md  commands.rs  connection_fib.rs  connection_rib.rs  db.rs  lib.rs  pipeline.rs  pipeline_pnet.rs  rib.rs  structs.rs  topic_manager.rs
core/src/crypto/: cert.rs  mod.rs
core/src/net/: libpnet.rs  mod.rs
core/src/network/: dtls.rs  grpc.rs  libpnet.rs  mod.rs  ros.rs  tcp.rs  tcpsocket.rs  udpstream.rs  webrtc.rs
core/src/network/deprecated/: dtls.rs  grpc.rs  tcp.rs  webrtc_depre.rs
core/src/network/deprecated/protocol/: gdp_protocol.rs  mod.rs
core/src/packet/: GDP_protocol.rs  mod.rs  my_protocol.rs
core/src/protocol/: mod.rs  my_protocol.rs
core/src/signal/: mod.rs
docker/: Dockerfile
docs/: crypto_names.md  h264.md  routing.md  turltebot4_demo.md  turtlebot4_demo.md  webrtc.md
other/apriltag_ros/cfg/: tags_36h11.yaml
other/apriltag_ros/launch/: rs_apriltag.launch.yaml
proto/: gdp.proto  psl.proto
scripts/: generate_crypto.sh
signaling/: Cargo.toml
signaling/src/: main.rs
src/: main.rs
src/resources/: .gitignore  README.md  automatic-docker.toml  automatic.toml  default_config.toml  demo_cloud.toml  demo_robot.toml  docker_listener.toml  docker_talker.toml  experiment_listener.toml  experiment_talker.toml  h264_decoder.toml  h264_encoder.toml  listener.toml  talker.toml  turtlebot.toml  turtlebot_client.toml
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs  conversion.rs  error.rs  lib.rs  logger.rs
utils/tests/: test_config.rs
