[package]
name = "gdp-router"
version = "0.0.1-beta"
authors = ["Eric Chen <kych@berkeley.edu>", "Jiachen Yuan <jcyuan_johnson@berkeley.edu>"]
edition = "2021"
repository = "https://github.com/data-capsule/gdp-router"
readme = "README.md"
license = "Apache 2.0"
keywords = ["router", "security"]
description = """
GDP Router
"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[features]
nightly = ["utils/nightly"]
termlog = ["utils/termlog"]
journald = ["utils/journald"]
syslog = ["utils/syslog"]

[dependencies]
utils = { path = "utils", features = ["termlog"]}
cli = { path = "cli"}
core = { path = "core" }
human-panic = "1.0.3"
better-panic = "0.3.0"
log = "0.4.14"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
