[package]
name = "core"
version = "0.0.1-beta"
authors = ["Eric Chen <kych@berkeley.edu>", "Jiachen Yuan <jcyuan_johnson@berkeley.edu>"]
description = "The application core code"
edition = "2021"

[features]
default = ["ros"]
ros = ["dep:r2r"]

[dependencies]
utils = { path = "../utils" }

rand = "0.8.4"
log = "0.4.14"
local-ip-address = "0.4.9"
strum_macros = "0.24.3"
anyhow = "1.0.66"
derivative = "2.2.0"
strum = "0.24.1"
multimap = "0.8.3"
openssl = "0.10.42"
regex="1.7.0"
serde = "1.0.149"
serde_json = "*"
tokio = { version = "1.22", features = ["full"] }
tokio-core = "0.1"
futures = "0.3.19"
tokio-openssl = '0.6'
tonic = "0.8"
prost = "0.11"
sha2 = "0.10.6"
base64="0.13.0"
lazy_static = "1.4"
hyper = { version = "0.14.16", features = ["full"] }
async-datachannel = "0.4.0"
async-tungstenite = { version = "0.17.2", features = ["tokio-openssl"] }
tracing-subscriber = "0.3.16"
parking_lot = "0.12.1"
tracing = "0.1.37"


[dependencies.r2r]
r2r = "0.6.2"
optional = true 

# deprecated dependencies 
# pnet= { version = "0.31.0", features = ["std"] }
# pnet_macros_support =  { version = "0.31.0" }
# pnet_macros ={ version = "0.31.0" }
# pnet_packet = { version = "0.31.0", features = ["std"] }

[build-dependencies]
tonic-build = "0.8"

