[package]
name = "sgc_signaling_server"
version = "0.2.0"
authors = ["Paul-Louis Ageneau", "Kaiyuan Chen"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tokio = { version = "1.20.4", features = ["full"] }
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
futures-channel = "0.3.21"
json = "0.12.4"
redis ={ version = "0.23.0" }
